Interrupciones OK. Se completa el ciclo entero. No manda los datos a thingspeak (problema de dirección Https???)

--- a/ESP8266-WiFi/Debug/makefile
+++ b/ESP8266-WiFi/Debug/makefile
@@ -61,7 +61,7 @@ main-build: ESP8266-WiFi.elf secondary-outputs
 
 # Tool invocations
 ESP8266-WiFi.elf ESP8266-WiFi.map: $(OBJS) $(USER_OBJS) C:\Users\carlo\STM32CubeIDE\workspace_1.17.0\ESP8266-WiFi\STM32F411VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ESP8266-WiFi.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\carlo\STM32CubeIDE\workspace_1.17.0\ESP8266-WiFi\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ESP8266-WiFi.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "ESP8266-WiFi.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\carlo\STM32CubeIDE\workspace_1.17.0\ESP8266-WiFi\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ESP8266-WiFi.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
