--- a/ThingSpeak-SHT85-Display/Debug/makefile
+++ b/ThingSpeak-SHT85-Display/Debug/makefile
@@ -65,7 +65,7 @@ main-build: ThingSpeak-SHT85-Display.elf secondary-outputs
 
 # Tool invocations
 ThingSpeak-SHT85-Display.elf ThingSpeak-SHT85-Display.map: $(OBJS) $(USER_OBJS) C:\Users\carlo\STM32CubeIDE\workspace_1.18.0\ThingSpeak-SHT85-Display\STM32F411VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ThingSpeak-SHT85-Display.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\carlo\STM32CubeIDE\workspace_1.18.0\ThingSpeak-SHT85-Display\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ThingSpeak-SHT85-Display.map" -Wl,--gc-sections -static -u _scanf_float -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "ThingSpeak-SHT85-Display.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\carlo\STM32CubeIDE\workspace_1.18.0\ThingSpeak-SHT85-Display\STM32F411VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ThingSpeak-SHT85-Display.map" -Wl,--gc-sections -static -u _scanf_float -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
